# nfx-cpu

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml  codeql.yml  documentation.yml  release.yml
benchmark/: BM_FeatureDetection.cpp  CMakeLists.txt  README.md
cmake/: nfx-cpu-config.cmake.in  nfxCpuBuildConfig.cmake  nfxCpuDependencies.cmake  nfxCpuInstall.cmake  nfxCpuPackaging.cmake  nfxCpuSources.cmake  nfxCpuTarget.cmake
doc/: CMakeLists.txt
include/nfx/: CPU.h
include/nfx/cpu/: CoreTopology.h  FeatureDetection.h  Identification.h
include/nfx/detail/cpu/: CoreTopology.inl  FeatureDetection.inl  Identification.inl
samples/: CMakeLists.txt  Sample_CoreTopology.cpp  Sample_FeatureDetection.cpp  Sample_Identification.cpp
test/: CMakeLists.txt  TESTS_FeatureDetection.cpp
